change  into file config application

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=aEWO0CARdziZjpxmoR79
 
 # Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
