--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,12 @@
 
 # MySQL DataSource configuration for Railway MySQL
-spring.datasource.url=jdbc:mysql://containers-us-west-38.railway.app:8025/railway?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=aEWO0CARdziZjpxmoR79
+#spring.datasource.url=jdbc:mysql://containers-us-west-38.railway.app:8025/railway?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=aEWO0CARdziZjpxmoR79
 
+spring.datasource.url=jdbc:mysql://mysql://root:pGPHiLKhiAmCmPTFcrbo@containers-us-west-124.railway.app:5843/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=pGPHiLKhiAmCmPTFcrbo
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 
