--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ spring.datasource.url=jdbc:mysql://mysql://root:pGPHiLKhiAmCmPTFcrbo@containers-
 spring.datasource.username=root
 spring.datasource.password=pGPHiLKhiAmCmPTFcrbo
 # Hibernate configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # File upload configuration
