--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,24 +1,23 @@
 
 # MySQL DataSource configuration for Railway MySQL
-#spring.datasource.url=jdbc:mysql://containers-us-west-38.railway.app:8025/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://containers-us-west-38.railway.app:8025/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=aEWO0CARdziZjpxmoR79
+ #Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+
+# File upload configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#spring.datasource.url=jdbc:mysql://containers-us-west-124.railway.app:5843/railway?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=root
-#spring.datasource.password=aEWO0CARdziZjpxmoR79
-# Hibernate configuration
+#spring.datasource.password=pGPHiLKhiAmCmPTFcrbo
+#
+## Hibernate configuration
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 #
 ## File upload configuration
 #spring.servlet.multipart.max-file-size=10MB
 #spring.servlet.multipart.max-request-size=10MB
-
-spring.datasource.url=jdbc:mysql://containers-us-west-124.railway.app:5843/railway?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=pGPHiLKhiAmCmPTFcrbo
-
-# Hibernate configuration
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-# File upload configuration
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
