--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://containers-us-west-38.railway.app:8025/railwa
 spring.datasource.username=root
 spring.datasource.password=aEWO0CARdziZjpxmoR79
  #Hibernate configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
